--- a/Dapr.Server/Dapr.Server.csproj
+++ b/Dapr.Server/Dapr.Server.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Dapr.AspNetCore" Version="1.10.0" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.53.0" />
     <PackageReference Include="protobuf-net" Version="3.2.26" />
+    <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
