--- a/Dapr.Server/appsettings.json
+++ b/Dapr.Server/appsettings.json
@@ -1,9 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "MinimumLevel": "Information"
   },
   "AllowedHosts": "*"
 }
