--- a/Dapr.Test/Dapr.Test.csproj
+++ b/Dapr.Test/Dapr.Test.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\Dapr.Grpc\Dapr.Grpc.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="publish_to_dapr.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
