--- a/Dapr.Server/Dapr.Server.csproj
+++ b/Dapr.Server/Dapr.Server.csproj
@@ -25,4 +25,10 @@
     <ProjectReference Include="..\Dapr.Grpc\Dapr.Grpc.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="publish_to_dapr.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
