--- a/dapr.yml
+++ b/dapr.yml
@@ -14,6 +14,7 @@ services:
     restart: always    
     command: ["./daprd",
       "--app-id", "Dapr-Server",
+#      "--app-protocol", "grpc",
       "--app-port", "62010",
       "--dapr-http-port", "62011",      
       "--dapr-grpc-port", "62012", 
@@ -39,6 +40,7 @@ services:
     restart: always    
     command: ["./daprd",
       "--app-id", "Dapr-Test",
+#      "--app-protocol", "grpc",
       "--app-port", "62020",
       "--dapr-http-port", "62021",      
       "--dapr-grpc-port", "62022", 
